# VideoCover

./: .gitignore  CMakeLists.txt  README.md
example/: keyframes_extract_diff.py  smile.py  video_to_image.py
include/: detech.h  dir.h  download.h  log.h  process.h
source/: CMakeLists.txt  Makefile  download  image_to_video.py  keyframes_extract.py  keyframes_extract_diff.py  run.cc  run.cpp  smile  smile.py  test.cc  video_to_image.py
source/include/: dir.h  download.h  log.h  os.h  process.h
source/multi/: keyframes_extract_diff.py
source/utils/: cascade.h  detect.cc  detect.h  dir.cc  dir.h  download.cc  process.cc  process.h
thrid_party/rewrite_video/: image_to_video.py  video_to_image.py
thrid_party/smile_detection/: smile.py
